--- a/node-app/docker-compose.dev.yml
+++ b/node-app/docker-compose.dev.yml
@@ -1,13 +1,8 @@
 version: "3"
 services:
-  node-app: #Image name = Foldername-node-app
-    container_name: express-node-app-container
-    build: .
+  node-app:
     volumes:
       - ./src:/app/src:ro
-    ports:
-      - "4000:4000"
     environment:
       - NODE_ENV=development
-    env_file:
-      - ./.env
+
