--- a/node-app/docker-compose.prod.yml
+++ b/node-app/docker-compose.prod.yml
@@ -1,11 +1,5 @@
 version: "3"
 services:
-  node-app: #Image name = Foldername-node-app
-    container_name: express-node-app-container
-    build: .
-    ports:
-      - "4000:4000"
+  node-app:
     environment:
       - NODE_ENV=production
-    env_file:
-      - ./.env
