--- a/node-app/docker-compose.prod.yml
+++ b/node-app/docker-compose.prod.yml
@@ -1,5 +1,10 @@
 version: "3"
 services:
   node-app:
+    build:
+      context: .
+      args:
+        - NODE_ENV=production
     environment:
       - NODE_ENV=production
+    command: npm start
