--- a/node-app/docker-compose.yml
+++ b/node-app/docker-compose.yml
@@ -9,6 +9,21 @@ services:
   mongo:
     image: mongo
     restart: always
+    volumes:
+      - mongo-db:/data/db #not bind mount anonymous volume .. (mongo-db just a name to avoid creating random name)
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: root
+  mongo-express: # Mongo UI to manage the mongo DB
+    image: mongo-express
+    restart: always
+    ports:
+      - 8081:8081
+    environment:
+      ME_CONFIG_MONGODB_ADMINUSERNAME: root
+      ME_CONFIG_MONGODB_ADMINPASSWORD: root
+      ME_CONFIG_MONGODB_URL: mongodb://root:root@mongo:27017/
+      ME_CONFIG_BASICAUTH: false    
+
+volumes:
+  mongo-db:
